# Network-social-media-platform

./: .env.example  .gitignore  Important_commands.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
SQL/: docker-compose.yml
admincontrol/: admin.py  tests.py
authenticate/: tests.py  urls.py  views.py
authenticate/static/authenticate/css/: styles.css
authenticate/templates/authenticate/: auth_layout.html  login.html  register.html
core/: models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/core/css/: styles.css
core/templates/core/: 404.html  about.html  contact.html  core_layout.html  index.html
core/templates/core/components/: footer.html  navbar.html
database/: info.txt
feed_and_posts/: apps.py  feed_urls.py  models.py  post_urls.py  tests.py  urls.py  views.py
feed_and_posts/migrations/: 0001_initial.py
feed_and_posts/static/feed_and_posts/css/: styles.css
feed_and_posts/static/feed_and_posts/js/: like.js
feed_and_posts/templates/feed_and_posts/: comment_on_post.html  create_post.html  delete_comment.html  delete_post.html  edit_comment.html  edit_post.html  feed_layout.html  following_feed.html  index.html
feed_and_posts/templates/feed_and_posts/components/: card.html  navbar.html  pagination.html  sidebar.html
network/: settings.py  urls.py
other/: Important_commands.md
users/: models.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_profile_follow.py
users/templates/users/: edit_profile.html  index.html
(+1 files in other folders)
