[project]
name = "Network"
dynamic = ["version"]
authors = [{ name = "Kumar Sahil", email = "krsahil8825@gmail.com" }]
maintainers = [{ name = "Kumar Sahil", email = "krsahil8825@gmail.com" }]
description = "A social media platform built with Django."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.10.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "Django==5.2.7",
    "idna==3.11",
    "requests==2.32.5",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "validators==0.35.0",
    "python-dotenv==1.2.1",
    "mysqlclient>=2.2.7",
    "gunicorn>=24.1.1",
]
